it under the terms of the "Artistic License 2.0" as published by 
The Perl Foundation. Consult the "LICENSE.txt" file for details.
================================================================


RELEASE NOTES
=============


2.39.1 - March ??, 2010

    Corrected a bug in the Logtalk compiler that forced recompilation of
    source files when the "smart_compilation" flag was set to "on".

    Updated the SWI-Prolog and YAP config files in order to recognize and
    compile the proprietary directive create_prolog_flag/3.

    Added a logtalk_library_path/2 entry for the library "home" (the user
    home directory) when running on Windows operating-systems. However, 
    this definition only works for some back-end Prolog compilers due to
    bugs in expanding paths containing more than one environment variable.

    Updated the "types_loader.lgt" library loader file to load the "rbtree"
    library object.

    Updated the Windows installer in order to warn the user when no
    compatible Prolog compiler can be found. In addition, update the
    installer in order to also create shortcuts to the main documentation
    files on the Logtalk user folder.

    Documentation cleanup, specially regarding installing, customizing, and
    running Logtalk. Simplified Prolog compatibility notes as the current set
    of compatible Prolog compilers provide a more uniform experience.


2.39.0 - February 28, 2010

    Removed support for the following Prolog compilers: ALS Prolog, Amzi!
    Prolog, BinProlog, GNU Prolog, IF/Prolog, JIProlog, K-Prolog, LPA
    MacProlog, LPA WinProlog, MasterProlog, Open Prolog, Prolog II+, and
    Quintus Prolog. Only Amzi! Prolog, GNU Prolog, and Quintus Prolog seem
    to be actively maintained. Amzi! Prolog ignores the official and de
    facto Prolog standards. GNU Prolog is currently missing crucial support
    for the standard directive multifile/1. Quintus Prolog is superseded by